--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,5 +18,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: build-push
         run: |
-          docker build . --tag sevenleap/apps:conor_website
-          docker push sevenleap/apps:conor_website
+          docker build . --tag sevenleap/apps:conor
+          docker push sevenleap/apps:conor
